# python-api-practices-examples

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
djangodrf/: README.md  demo.py  pyproject.toml
djangodrf/app/api/: permissions.py  urls.py  views.py
djangodrf/app/app/: settings.py  urls.py
djangodrf/app/clients/: payment_client.py
djangodrf/app/db/: payments_repository.py
djangodrf/app/retries/: retry_helper.py
djangodrf/app/services/: payments.py
djangodrf/tests/: test_payment_client.py  test_payments_view.py
fastapi/: README.md  demo.py  pyproject.toml
fastapi/app/: __main__.py  api.py  config.py  demo.py
fastapi/app/clients/: payment_client.py
fastapi/app/db/: payments_repository.py
fastapi/app/middleware/: request_logging.py
fastapi/app/retries/: retry_helper.py
fastapi/app/services/: payments.py
fastapi/app/utils/: settings.py
fastapi/tests/: test_payment_client.py  test_retry_helper.py
