[project]
name = "python-api-practices-examples-fastapi"
version = "0.1.0"
description = "FastAPI-track examples for Python API Practices — Vol. 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

# Optional (nice-to-have) to keep imports explicit and predictable
# If you keep your code under fastapi/app/, imports like `from app...` work cleanly.
pythonpath = ["."]
